LORE-263 Persistence layer for transformation manager api (#5)
LORE-263 Switched to Java 11
Initial Implementation of the pojo layer for persistence
Renamed packages and moved classes around
Abstracted out data layer from in-memory implementation